@@ -30,7 +30,7 @@ val commonsCodecVersion: String by project
 val mockkVersion: String by project
 
 plugins {
-    kotlin("jvm") version "2.3.20"
+    kotlin("jvm") version "2.4.0-Beta1"
     alias(libs.plugins.kotlinxSerialization)
     alias(libs.plugins.ktor)
 }
@@ -123,6 +123,10 @@ dependencies {
 
 tasks.jar {
     enabled = false
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
 
 tasks.shadowJar {
